# template-python

./: .pre-commit-config.yaml  Dockerfile  alembic.ini  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 3dc81cd525ce_first_migration.py  648a82fe81c0_.py  6a21f9fff7ff_.py  6c28c368f175_.py  8250e4b6decb_.py  e476eef8a819_.py
app/: config.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  login.py  matches.py  teams.py  users.py  utils.py
app/core/: config.py  security.py  vars.py
app/crud/: __init__.py  crud_match.py  crud_team.py  crud_user.py
app/db/: session.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  match.py  team.py
