[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "Backend Squads"
authors = ["Efren A. Rosales Gomez <e.rosales@traxion.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.89.1"
uvicorn = "0.20.0"
sqlalchemy = "2.0.7"
jose = "1.0.0"
jwt = "1.3.1"
python-jose = "3.3.0"
pydantic = "1.10.6"
psycopg2 = "2.9.3"
email-validator = "1.3.1"
passlib = "1.7.4"
python-multipart = "0.0.6"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
